--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "postinstall": "touch secrets.js",
     "seed": "node script/seed.js",
     "start": "node server",
-    "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
+    "start-dev": "cross-env NODE_ENV='development' npm run build-client-watch & cross-env NODE_ENV='development' npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
   },
@@ -39,11 +39,17 @@
     ]
   },
   "author": "Jackie Nguyen",
+  "proxy": {
+    "/api/users": {
+      "target": "http://localhost:8080"
+    }
+  },
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
+    "cross-env": "^7.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
     "history": "^4.9.0",
