--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build-client-watch": "webpack -w",
     "deploy": "script/deploy",
     "heroku-token": "script/encrypt-heroku-auth-token.js",
-    "lint": "eslint ./ --ignore-path .gitignore",
-    "lint-fix": "npm run lint -- --fix",
+
     "prepare": "if [ -d .git ]; then npm-merge-driver install; fi",
     "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
     "postinstall": "touch secrets.js",
@@ -22,22 +21,6 @@
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "prettier --write",
-      "npm run lint-fix",
-      "git add"
-    ],
-    "*.{css,scss,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
   "author": "Jackie Nguyen",
   "proxy": {
     "/api/users": {
@@ -46,7 +29,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
+    "axios": "^0.24.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
     "cross-env": "^7.0.3",
@@ -90,16 +78,17 @@
     "chai": "^4.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "eslint": "^5.16.0",
-    "eslint-config-fullstack": "^6.0.0",
+    "eslint": "^8.6.0",
+    "eslint-config-fullstack": "^3.0.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.12.4",
     "git-url-parse": "^11.1.2",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
+    "lint-staged": "^12.1.5",
     "mocha": "^6.1.4",
-    "nodemon": "^1.18.3",
-    "npm-merge-driver": "^2.3.5",
+    "nodemon": "^2.0.15",
+    "npm-merge-driver": "^0.0.0",
+    "npm-merge-driver-install": "^2.0.2",
     "prettier": "1.11.1",
     "react-test-renderer": "^16.4.2",
     "redux-devtools-extension": "^2.13.5",
@@ -107,7 +96,7 @@
     "simple-git": "^1.121.0",
     "supertest": "^4.0.2",
     "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
+    "webpack-cli": "^4.9.1",
     "yaml": "^1.6.0"
   }
 }
